refactor: log-manager update query log by trace and optimize